# buckets

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
buckets-cli/: Cargo.toml
buckets-cli/src/: cli.rs  config.rs  local.rs  main.rs  progress.rs
buckets-cli/src/client/: chunk.rs  merge.rs  mod.rs  precheck.rs
buckets-common/: Cargo.toml
buckets-common/src/: db.rs  error.rs  lib.rs  tests.rs
buckets-common/src/constant/: auth.rs  cli.rs  db.rs  http.rs  mod.rs  storage.rs  task.rs  upload.rs
buckets-common/src/model/: api.rs  db.rs  mod.rs
buckets-common/src/utils/: crypto.rs  hash.rs  image.rs  mod.rs  password.rs  path.rs  validate.rs
buckets-srv/: Cargo.toml
buckets-srv/src/: app.rs  config.rs  db.rs  embed.rs  main.rs
buckets-srv/src/api/: auth.rs  chunk.rs  direct.rs  download.rs  merge.rs  mod.rs  objects.rs  precheck.rs  sts.rs  tus.rs  users.rs
buckets-srv/src/dao/: mod.rs  objects.rs  tasks.rs  users.rs
buckets-srv/src/middleware/: auth.rs  logger.rs  mod.rs  ratelimit.rs  trace.rs
buckets-srv/src/service/: auth_svc.rs  chunk_svc.rs  file_svc.rs  mod.rs  tus_svc.rs
buckets-srv/src/storage/: fs.rs
buckets-srv/src/task/: gc_clean.rs  mod.rs  ref_check.rs
deploy/: docker-compose.yaml  nginx.conf
docs/: api.md  architecture.md  deploy.md  schema.md  upload-chunked.md  upload-tus.md  upload.md
jssdk/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
jssdk/src/: auth-client.ts  buckets-client.ts  errors.ts  http-client.ts  index.ts
jssdk/src/api/: auth-api.ts  objects-api.ts  types.ts  users-api.ts
jssdk/src/upload/: chunk-uploader.ts  direct-uploader.ts  hasher.ts  read-file-slice.ts  tus-uploader.ts  types.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_tables.rs  main.rs
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.vue
web/src/components/: Dialog.vue  Layout.vue
web/src/composables/: useDialog.ts  useDownload.ts
web/src/router/: index.ts
web/src/sdk/: api.ts  chunk-uploader.ts  client.ts  index.ts  tus-uploader.ts
web/src/stores/: api.ts  auth.ts  objects.ts  users.ts
web/src/views/: Login.vue  ObjectList.vue  UserList.vue
