[workspace]
resolver = "2"
members = [
    "buckets-common",
    "buckets-srv",
    "buckets-cli",
    "migration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
base64 = "0.22"
md-5 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
jsonwebtoken = { version = "8", default-features = false }
bytes = "1"
futures = "0.3"
argon2 = "0.5"
sea-orm = { version = "1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros", "chrono"] }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
