[package]
name = "buckets-common"
version.workspace = true
edition.workspace = true

[features]
axum = ["dep:axum"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
base64.workspace = true
md-5.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true

sea-orm.workspace = true
argon2.workspace = true
axum = { version = "0.8", optional = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
