[package]
name = "buckets-srv"
version.workspace = true
edition.workspace = true

[dependencies]
buckets-common = { path = "../buckets-common", features = ["axum"] }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
base64.workspace = true
hex.workspace = true
sha2.workspace = true
md-5.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
dotenvy = "0.15"
tokio-util = "0.7"
dashmap = "6"

axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
http-body-util = "0.1"
sea-orm.workspace = true
libc = "0.2"
mime_guess = "2.0.5"
rust-embed = "8.5.0"
