[package]
name = "migration"
version.workspace = true
edition.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration.workspace = true
buckets-common = { path = "../buckets-common" }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
dotenvy = "0.15"
